--- a/function.html
+++ b/function.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
-    <script src="loops.js"></script>
+    <script src="function.js"></script>
 </head>
 <body>
     
